[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Level1.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/RadioactiveRoom.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/TabScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/PauseScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Instructions1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Objectives1.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/TitilliumWeb/TitilliumWeb-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/ObjNotif.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/LvlCompleteScreen.tscn" type="PackedScene" id=10]

[sub_resource type="BoxShape" id=1]

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 8 )

[node name="Level1" type="Node"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 7.27318, 1.2296, -6.6927 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.551194, 0.834377, 0, -0.834377, 0.551194, 0.0895562, 6.06915, 11.8562 )

[node name="RadioactiveRoom" parent="." groups=["sources"] instance=ExtResource( 3 )]

[node name="TabScreen" parent="." instance=ExtResource( 4 )]
visible = false

[node name="PauseScreen" parent="." instance=ExtResource( 5 )]

[node name="InstObj1" type="CanvasLayer" parent="."]
layer = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InstObj1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -367.0
margin_top = -150.0
margin_right = 367.0
margin_bottom = 101.0

[node name="Instructions1" parent="InstObj1/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 734.0
margin_bottom = 117.0

[node name="Objectives1" parent="InstObj1/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 121.0
margin_right = 734.0
margin_bottom = 251.0

[node name="ObjNotif" parent="." instance=ExtResource( 9 )]

[node name="EndZone" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="EndZone"]
transform = Transform( 1.75, 0, 0, 0, 1.25, 0, 0, 0, 1.75, 6.25, 1.25, 6.75 )
shape = SubResource( 1 )

[node name="CompLvlText" type="Label3D" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7.99483, 1.354, 6.803 )
double_sided = false
text = "[F] Complete Level"
font = SubResource( 2 )

[node name="LvlCompleteScreen" parent="." instance=ExtResource( 10 )]

[connection signal="body_entered" from="EndZone" to="." method="_on_EndZone_body_entered"]
[connection signal="body_exited" from="EndZone" to="." method="_on_EndZone_body_exited"]
